Fix regex pattern in vercel.json for correct file extension matching

--- a/vercel.json
+++ b/vercel.json
@@ -41,7 +41,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|html|json|xml|txt))",
+      "source": "/(.*)\\.(js|css|html|json|xml|txt)",
       "headers": [
         {
           "key": "Cache-Control",
