Enhance build process by adding new scripts for analysis, linting fixes, and type checking in package.json; update Vite configuration to include gzip and brotli compression, enable minification, and improve chunking strategy for better performance.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:analyze": "tsc && vite build --mode analyze",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "test:build": "npm run typecheck && npm run lint && npm run build"
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
