--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@giscus/react": "^3.1.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react-router-dom": "^5.3.3",
     "buffer": "^6.0.3",
     "framer-motion": "^12.22.0",
