Update Vercel configuration to include caching headers for new image assets. Specify cache control for /me-128.jpg and /me-64.jpg to improve performance and optimize asset delivery.

--- a/vercel.json
+++ b/vercel.json
@@ -37,7 +37,16 @@
       ]
     },
     {
-      "source": "/me-*.jpg",
+      "source": "/me-128.jpg",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/me-64.jpg",
       "headers": [
         {
           "key": "Cache-Control",
