Update Vercel configuration and static blog generation script to reflect new directory structure for blog assets. Change blog destination paths to include '/static/' for improved organization and accessibility.

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
           "value": ".*(bot|crawler|spider|crawling|ChatGPT|Claude|Anthropic|OpenAI|Bard|Google|Bing|Yahoo|DuckDuckGo|Baidu|facebookexternalhit|twitterbot|linkedinbot|whatsapp|telegram|slack).*"
         }
       ],
-      "destination": "/blog/:path*/index.html"
+      "destination": "/static/blog/:path*/index.html"
     },
     {
       "source": "/blog",
@@ -20,7 +20,7 @@
           "value": ".*(bot|crawler|spider|crawling|ChatGPT|Claude|Anthropic|OpenAI|Bard|Google|Bing|Yahoo|DuckDuckGo|Baidu|facebookexternalhit|twitterbot|linkedinbot|whatsapp|telegram|slack).*"
         }
       ],
-      "destination": "/blog/index.html"
+      "destination": "/static/blog/index.html"
     },
     {
       "source": "/(.*)",
