--- a/image-validator/requirements.txt
+++ b/image-validator/requirements.txt
@@ -2,7 +2,7 @@
 autogen-agentchat>=0.6.0
 autogen-ext>=0.6.0
 autogen-core>=0.6.0
-gradio>=4.0.0
+gradio==5.35.0
 python-dotenv>=1.0.0
 pillow>=10.0.0
 pydantic>=2.0.0
