--- a/package.json
+++ b/package.json
@@ -53,5 +53,10 @@
     "typescript-eslint": "^8.48.0",
     "vite": "^7.2.6",
     "vite-plugin-compression": "^0.5.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "mdast-util-to-hast": ">=13.2.1"
+    }
   }
 }
