--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@giscus/react": "^3.1.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.6.1",
     "buffer": "^6.0.3",
     "framer-motion": "^12.23.26",
     "highlight.js": "^11.11.1",
