--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,57 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
+# Dependabot configuration
+# Docs: https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
 version: 2
 updates:
-  # Enable version updates for npm (main project)
+  # NPM dependencies (main project)
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
-    
-  # Enable version updates for pip (Python image-validator)
+    # Group all npm updates into a single PR
+    groups:
+      all-npm-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
+      # Major updates get their own PRs (breaking changes need individual review)
+      major-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "major"
+    # Limit open PRs to reduce noise
+    open-pull-requests-limit: 5
+
+  # Python dependencies (image-validator)
   - package-ecosystem: "pip"
     directory: "/image-validator"
     schedule:
       interval: "weekly"
+    # Group all pip updates into a single PR
+    groups:
+      all-python-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
+      major-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "major"
+    open-pull-requests-limit: 3
+
+  # UV lockfile updates (image-validator)
+  - package-ecosystem: "uv"
+    directory: "/image-validator"
+    schedule:
+      interval: "weekly"
+    groups:
+      all-uv-dependencies:
+        patterns:
+          - "*"
+    open-pull-requests-limit: 2
